--- a/index.html
+++ b/index.html
@@ -5,22 +5,27 @@
 		<title>World Database Lookup</title>
 
 		<!-- you can modify this as needed or to your preference -->
-		<link href="world.css" type="text/css" rel="stylesheet" />
-
+		<link rel="stylesheet" href="world.css" type="text/css"/>
 		<!-- you write this -->
 		<script src="world.js" type="text/javascript"></script>
 	</head>
 
 	<body>
+		<div class="header">
 		<header>
+			<img src="globeimage.png" alt="Image of globe" class="headerimage">
 			<h1>World Database Lookup</h1>
 		</header>
+	</div>
 
 		<main>
 			<div id="controls">
-				<label for="country">Country:</label>
+				
 				<input id="country" type="search" name="country" placeholder="Enter country name" />
-				<button id="lookup">Lookup</button>
+				<div id="btn">
+				<button id="lookup">Lookup Country</button>
+				<button id="city">Lookup Cities</button>
+				</div>
 			</div>
 			
 			<div id="result">
