--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
 
 		<main>
 			<div id="controls">
-				
+				<label for="country">Country:</label>
 				<input id="country" type="search" name="country" placeholder="Enter country name" />
-				<div id="btn">
-				<button id="lookup">Lookup Country</button>
-				<button id="city">Lookup Cities</button>
-				</div>
+				<button id="lookup">Lookup</button>
+				<button id ="cities">Lookup Cities</button>
 			</div>
 			
 			<div id="result">
